// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Media basic 1`] = `
<div>
  <div
    class="flex items-start"
  />
</div>
`;

exports[`Media body 1`] = `
<div>
  <div
    class="flex items-start"
  >
    image
    <div
      class="flex-1 ml-3"
    >
      body
    </div>
  </div>
</div>
`;
